--- a/style.css
+++ b/style.css
@@ -1,31 +1,50 @@
 body {
-    background-color: rgb(8, 8, 127);
-  }
-  
-  h1 {
-    color: rgb(241, 109, 109);
-    text-align: center;
-  }
-  
-  h3 {
-    color: rgb(255, 255, 255);
-    text-align: center;
-  }
-  
-  p {
-    font-family: "Comic Sans MS", "Comic Sans";
-    font-size: 20px;
-    width: 800px;
-    margin: 0 auto;
-    text-align: center;
-  }
-  img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  header
-  h1 {
-    font-family: "Papyrus";
-  }
-  
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+}
+
+header h1 {
+  margin: 0;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+nav li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+}
+
+main {
+  padding: 20px;
+}
+
+section {
+  margin-bottom: 40px;
+}
+
+section h2 {
+  margin-top: 0;
+}
+
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
